# Hearsay

./: AGENTS.md  CLAUDE.md  README.md  RELEASING.md  build.bat  installer.iss  mise.toml  pyproject.toml  requirements-gpu.txt  requirements.txt
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: manual_device_check.py
src/hearsay/: __init__.py  app.py  config.py  constants.py
src/hearsay/audio/: devices.py  recorder.py
src/hearsay/output/: markdown_writer.py
src/hearsay/summarize/: __init__.py  client.py
src/hearsay/transcription/: engine.py  gpu_detect.py
src/hearsay/ui/: about_window.py  live_view.py  settings_window.py  window_icon.py  wizard.py
src/hearsay/utils/: paths.py
tests/: test_pipeline_writer.py
