[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hearsay"
version = "1.0.3"
description = "Windows desktop app that records system audio and/or microphone and transcribes it locally with Whisper, with optional LLM summarization."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Robert Parks" }]
dependencies = [
    "faster-whisper>=1.0.0",
    "PyAudioWPatch>=0.2.12",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# NVIDIA GPU acceleration (CUDA 12 cuBLAS + cuDNN 9). No PyTorch needed.
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9.0",
]

[project.gui-scripts]
hearsay = "hearsay.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hearsay"]
